home/paperless-ngx/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
  labels:
    app.kubernetes.io/name: paperless-ngx
spec:
  selector:
    app.kubernetes.io/name: paperless-ngx
  ports:
    - port: 8000
      targetPort: web
      name: web
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  labels:
    app.kubernetes.io/name: paperless-ngx
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless-ngx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless-ngx
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/nas
                    operator: In
                    values:
                      - "nas"
      tolerations:
        - key: "nas"
          operator: "Equal"
          value: "true"
          effect: NoSchedule
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:2.14.7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              protocol: TCP
              name: web
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: data
            - mountPath: /usr/src/paperless/media
              name: media
            - mountPath: /usr/src/paperless/export
              name: export
            - mountPath: /usr/src/paperless/consume
              name: consume
      volumes:
        - name: data
          hostPath:
            path: <NFS_STOR_0_PATH>/system/paperless/data
            type: Directory
        - name: media
          hostPath:
            path: <NFS_STOR_0_PATH>/system/paperless/media
            type: Directory
        - name: export
          hostPath:
            path: <NFS_STOR_0_PATH>/system/paperless/export
            type: Directory
        - name: consume
          hostPath:
            path: <NFS_STOR_0_PATH>/system/paperless/consume
            type: Directory
