home/paperless-ngx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    cert-manager.io/cluster-issuer: letsencrypt-production
    # Get Homepage configuration
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Different manuals and instructions
    gethomepage.dev/group: Home
    gethomepage.dev/icon: paperless-ngx.png
    gethomepage.dev/name: Paperless ngx
    gethomepage.dev/widget.type: "paperlessngx"
    gethomepage.dev/widget.url: "http://paperless-ngx:8000"
    gethomepage.dev/widget.key: "<path:kv/data/homepage#paperless-token>"
spec:
  ingressClassName: nginx
  rules:
    - host: paperless.<homelab-domain>
      http:
        paths:
          - path: /
            backend:
              service:
                name: paperless-ngx
                port:
                  name: web
            pathType: Prefix
  tls:
    - hosts:
        - paperless.<homelab-domain>
      secretName: "paperless.<homelab-domain>-cert"
